mobile対応用タッチ操作を追加

--- a/page-board.html
+++ b/page-board.html
@@ -19,6 +19,7 @@
   <script src="js/session--board.js" defer></script>
   <script src="js/modal--board.js" defer></script>
   <script src="js/canvas.js" defer></script>
+  <script src="js/canvas-mobile.js" defer></script>
 </head>
 <body class="l-body">
   <div class="l-body__head--board"></div>
