canvasのzoomボタンにactiveを追加

--- a/page-board.html
+++ b/page-board.html
@@ -149,12 +149,12 @@
         <canvas class="p-canvas__canvas--map" id="js-canvasMap"></canvas>
       </div>
       <div class="p-canvas__zoom">
-        <div class="p-canvas__btn--zoom">
-          <button id="js-zoomUp">
+        <div class="p-canvas__btn--zooms">
+          <button class="p-canvas__btn--zoom" id="js-zoomUp">
             <img src="image/materials/zoom--plus.svg" alt="zoom--plus">
           </button>
           <div class="p-canvas__btn--zoomLine"></div>
-          <button id="js-zoomDown">
+          <button class="p-canvas__btn--zoom" id="js-zoomDown">
             <img src="image/materials/zoom--minus.svg" alt="zoom--minus">
           </button>
         </div>
