--- a/page-operators.html
+++ b/page-operators.html
@@ -16,8 +16,9 @@
   <!--css-->
   <link rel="stylesheet" href="css/style.css">
   <!--JavaScript-->
-  <script src="js/modal.js" defer></script>
-  <script src="js/session--operators.js" defer></script>
+  <script src="js/common.js" defer></script>
+  <script src="js/operators/modal-operators.js" defer></script>
+  <script src="js/operators/session--operators.js" defer></script>
 </head>
 <body class="l-body">
   <div class="l-body__head--operators"></div>
