--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <!--css-->
   <link rel="stylesheet" href="css/style.css">
   <!--JavaScript-->
-  <script src="js/modal.js" defer></script>
-  <script src="js/session--index.js" defer></script>
+  <script src="js/common.js" defer></script>
+  <script src="js/index/modal--index.js" defer></script>
+  <script src="js/index/session--index.js" defer></script>
 </head>
 <body class="l-body">
   <div class="l-body__head--index">
