--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!--css-->
   <link rel="stylesheet" href="css/style.css">
   <!--JavaScript-->
+  <script src="js/constants.js" defer></script>
   <script src="js/common.js" defer></script>
-  <script src="js/index/modal--index.js" defer></script>
   <script src="js/index/session--index.js" defer></script>
 </head>
 <body class="l-body">
