--- a/page-board.html
+++ b/page-board.html
@@ -16,6 +16,7 @@
   <!--css-->
   <link rel="stylesheet" href="css/style.css">
   <!--JavaScript-->
+  <script src="js/constants.js" defer></script>
   <script src="js/common.js" defer></script>
   <script src="js/board/session--board.js" defer></script>
   <script src="js/board/modal--board.js" defer></script>
@@ -619,7 +620,7 @@
                 <p></p>
               </div>
             </div>
-            <button class="c-modal__return">
+            <button class="c-modal__return" id="js-iconSettingReturnATK">
               <img src="image/materials/return.svg" alt="return">
               <p>Return</p>
             </button>
@@ -789,7 +790,7 @@
                 <p></p>
               </div>
             </div>
-            <button class="c-modal__return">
+            <button class="c-modal__return" id="js-iconSettingReturnDEF">
               <img src="image/materials/return.svg" alt="return">
               <p>Return</p>
             </button>
