--- a/page-operators.html
+++ b/page-operators.html
@@ -16,6 +16,7 @@
   <!--css-->
   <link rel="stylesheet" href="css/style.css">
   <!--JavaScript-->
+  <script src="js/constants.js" defer></script>
   <script src="js/common.js" defer></script>
   <script src="js/operators/modal--operators.js" defer></script>
   <script src="js/operators/session--operators.js" defer></script>
