オペレータとしてstrikerおよびsentry選択時の挙動を修正

--- a/page-operators.html
+++ b/page-operators.html
@@ -81,7 +81,7 @@
                 <img src="image/icon_operator/attacker/Y0R6_BADGE_Sledge_L.png" alt="operator_sledge">
               </div>
               <div class="c-operator__icon--modal js-operatorATK">
-                <img src="image/icon_operator/attacker/Y0R6_BADGE_Thatcher_L.png" alt="operator_thatcher">
+                <img src="image/icon_operator/attacker/r6s-operators-badge-thatcher.avif" alt="operator_thatcher">
               </div>
               <div class="c-operator__icon--modal js-operatorATK">
                 <img src="image/icon_operator/attacker/Y0R6_BADGE_Ash_L.png" alt="operator_ash">
