要塞の追加、マップdialogのレイアウト調整

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <p>Consulate</p>
         </div>
       </button>
+      <!--
       <button class="c-map">
         <div class="c-map__shadow">
           <div class="c-map__shadow--object"></div>
@@ -105,6 +106,18 @@
         </div>
         <div class="c-map__active">
           <p>Emeraldplains</p>
+        </div>
+      </button>
+      -->
+      <button class="c-map">
+        <div class="c-map__shadow">
+          <div class="c-map__shadow--object"></div>
+        </div>
+        <div class="c-map__frame">
+          <img src="image/maps/r6-maps-fortress-blueprints/fortress-reworked-thumbnail.avif" alt="Fortress" class="c-map__img">
+        </div>
+        <div class="c-map__active">
+          <p>Fortress</p>
         </div>
       </button>
       <button class="c-map">
