--- a/page-board.html
+++ b/page-board.html
@@ -1178,70 +1178,195 @@
             <img src="image/materials/menu__close--white.svg">
           </button>
           <div class="c-modal__mapTable">
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Bank">
-              <img src="image/maps/r6-maps-bank-blueprints/R6S_Maps_Bank_EXT.jpg" alt="Bank">
-              <p>Bank</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Border">
-              <img src="image/maps/r6-maps-border-blueprints/R6S_Maps_Border_EXT.jpg" alt="Border">
-              <p>Border</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Chalet">
-              <img src="image/maps/r6-maps-chalet-blueprints/R6S_Maps_Chalet_EXT.jpg" alt="Chalet">
-              <p>Chalet</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Clubhouse">
-              <img src="image/maps/r6-maps-clubhouse-blueprints/R6S_Maps_ClubHouse_EXT.jpg" alt="Clubhouse">
-              <p>Clubhouse</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Coastline">
-              <img src="image/maps/r6-maps-coastline-blueprints/r6-maps-coastline.jpg" alt="Coastline">
-              <p>Coastline</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Consulate">
-              <img src="image/maps/r6-maps-consulate-blueprints_may23/ModernizedMap_Consulate_keyart.jpg" alt="Consulate">
-              <p>Consulate</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Emeraldplains">
-              <img src="image/maps/r6-maps-emeraldplains-blueprints/r6s_maps_emeraldplains__1_.jpg" alt="Emeraldplains">
-              <p>Emeraldplains</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Kafe">
-              <img src="image/maps/r6-maps-kafe-blueprints/R6S_Maps_RussianCafe_EXT.jpg" alt="Kafe">
-              <p>Kafe</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Kanal">
-              <img src="image/maps/r6-maps-kanal-blueprints/r6-maps-kanal.jpg" alt="Kanal">
-              <p>Kanal</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Lair">
-              <img src="image/maps/r6-maps-lair-blueprints/ModernizedMap_Lair_keyart.jpg" alt="Lair">
-              <p>Lair</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Nighthavenlabs">
-              <img src="image/maps/r6-maps-nighthavenlabs-blueprints/ModernizedMap_Nighthaven_keyart.jpg" alt="Nighthavenlabs">
-              <p>Nighthavenlabs</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Oregon">
-              <img src="image/maps/r6-maps-oregon-blueprints/r6-maps-oregon.jpg" alt="Oregon">
-              <p>Oregon</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Outback">
-              <img src="image/maps/r6-maps-outback-blueprints/r6-maps-outback.jpg" alt="Outback">
-              <p>Outback</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Skyscraper">
-              <img src="image/maps/r6-maps-skyscraper-blueprints/r6-maps-skyscraper.jpg" alt="Skyscraper">
-              <p>Skyscraper</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Themepark">
-              <img src="image/maps/r6-maps-themepark-blueprints/rainbow6_maps_theme-park_thumbnail.jpg" alt="Themepark">
-              <p>Themepark</p>
-            </div>
-            <div class="c-modal__map js-mapSetting__map" id="js-mapSetting--Villa">
-              <img src="image/maps/r6-maps-villa-blueprints/r6-maps-villa.jpg" alt="Villa">
-              <p>Villa</p>
-            </div>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Bank">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-bank-blueprints/R6S_Maps_Bank_EXT.jpg" alt="Bank" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Bank</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Border">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-border-blueprints/R6S_Maps_Border_EXT.jpg" alt="Border" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Border</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Chalet">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-chalet-blueprints/R6S_Maps_Chalet_EXT.jpg" alt="Chalet" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Chalet</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Clubhouse">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-clubhouse-blueprints/R6S_Maps_ClubHouse_EXT.jpg" alt="Clubhouse" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Clubhouse</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Coastline">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-coastline-blueprints/r6-maps-coastline.jpg" alt="Coastline" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Coastline</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Consulate">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-consulate-blueprints_may23/ModernizedMap_Consulate_keyart.jpg" alt="Consulate" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Consulate</p>
+              </div>
+            </button>
+            <!--
+            <button class="c-map">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-emeraldplains-blueprints/r6s_maps_emeraldplains__1_.jpg" alt="Emeraldplains" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Emeraldplains</p>
+              </div>
+            </button>
+            -->
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Fortress">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-fortress-blueprints/fortress-reworked-thumbnail.avif" alt="Fortress" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Fortress</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Kafe">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-kafe-blueprints/R6S_Maps_RussianCafe_EXT.jpg" alt="Kafe" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Kafe</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Kanal">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-kanal-blueprints/r6-maps-kanal.jpg" alt="Kanal" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Kanal</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Liar">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-lair-blueprints/ModernizedMap_Lair_keyart.jpg" alt="Lair" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Liar</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Nighthavenlabs">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-nighthavenlabs-blueprints/ModernizedMap_Nighthaven_keyart.jpg" alt="Nighthavenlabs" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Nighthavenlabs</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Oregon">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-oregon-blueprints/r6-maps-oregon.jpg" alt="Oregon" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Oregon</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Outback">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-outback-blueprints/r6-maps-outback.jpg" alt="Outback" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Outback</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Skyscraper">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-skyscraper-blueprints/r6-maps-skyscraper.jpg" alt="Skyscraper" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Skyscraper</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Themepark">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-themepark-blueprints/rainbow6_maps_theme-park_thumbnail.jpg" alt="Themepark" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Themepark</p>
+              </div>
+            </button>
+            <button class="c-map c-modal__map js-mapSetting__map" id="js-mapSetting--Villa">
+              <div class="c-map__shadow">
+                <div class="c-map__shadow--object"></div>
+              </div>
+              <div class="c-map__frame">
+                <img src="image/maps/r6-maps-villa-blueprints/r6-maps-villa.jpg" alt="Villa" class="c-map__img">
+              </div>
+              <div class="c-map__active">
+                <p>Villa</p>
+              </div>
+            </button>
           </div>
         </div>
       </dialog> <!--dialog-->
