mobile用レイアウト調整

--- a/page-board.html
+++ b/page-board.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Board | R6SXBB</title>
   <meta name="description" content="レインボーシックスシージの作戦ボード。作戦の検討にお役立てください。">
   <meta name="keywords" content="Rainbow, Siege, R6SX, briefing, tactics, strategy, レインボーシックスシージ, シージ, 作戦ボード">
@@ -22,7 +22,7 @@
   <script src="js/board/modal--board.js" defer></script>
   <script src="js/board/canvas.js" defer></script>
 </head>
-<body class="l-body">
+<body class="l-body base__body--canvas">
   <div class="l-body__head--board"></div>
   <div class="l-body__body--board p-board">
     <img src="image/logo--large.svg" alt="R6SXBriefingBoard ロゴ" class="l-body__logo--board">
