--- a/page-board.html
+++ b/page-board.html
@@ -1429,7 +1429,11 @@
       <button class="c-modal__close--white" id="close--howToUse">
         <img src="image/materials/menu__close--white.svg">
       </button>
-
+      <div class="p-howToUse__maintenance">
+        <p>Under maintenance.</p>
+        <p class="u-font--ja">メンテナンス中</p>
+      </div>
+      <!--
       <div class="p-howToUse__header">
         <div class="p-howToUse__pages">
           <div class="p-howToUse__pages--pageIndicator pageIndicator--active"></div>
@@ -1437,7 +1441,6 @@
           <div class="p-howToUse__pages--pageIndicator"></div>
         </div>
       </div>
-
       <div class="p-howToUse__navs">
         <button class="p-howToUse__nav nav--left" id="js-howToUse--back">
           <img src="image/materials/left.svg" alt="back">
@@ -1520,7 +1523,7 @@
           </div>
         </div>
       </div>
-      
+      -->
     </div>
   </div>
   <footer class="l-footer--board">
