--- a/page-operators.html
+++ b/page-operators.html
@@ -7,6 +7,13 @@
   <meta name="description" content="レインボーシックスシージの作戦ボード。作戦の検討にお役立てください。">
   <meta name="keywords" content="Rainbow, Siege, R6SX, briefing, tactics, strategy, レインボーシックスシージ, シージ, 作戦ボード">
   <!--OGP-->
+  <meta property="og:title" content="RainbowSixSiegeX BriefingBase">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://heishia35.github.io/RainbowSixSiegeX_BB/">
+  <meta property="og:image" content="">
+  <meta property="og:site_name" content="RainbowSixSiegeX BriefingBase">
+  <meta property="og:description" content="レインボーシックスシージの作戦ボード。作戦の検討にお役立てください。">
+  <meta name="twitter:card" content="summary_large_image">
   <!--favicon-->
   <link rel="icon" type="image/webp" href="image/logo--small.webp">
   <!--font-->
