--- a/page-operators.html
+++ b/page-operators.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="RainbowSixSiegeX BriefingBase">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://heishia35.github.io/RainbowSixSiegeX_BB/">
-  <meta property="og:image" content="https://github.com/Akiro35/RainbowSixSiegeX_BB_test/raw/49fff21bb83fb9827a2183b1f7489d7d820bc3f1/image/top%20logo%20L--ogp.jpg">
+  <meta property="og:image" content="https://heishia35.github.io/RainbowSixSiegeX_BB/image/top_logo_L--ogp.jpg">
   <meta property="og:site_name" content="RainbowSixSiegeX BriefingBase">
   <meta property="og:description" content="レインボーシックスシージの作戦ボード。作戦の検討にお役立てください。">
   <meta name="twitter:card" content="summary_large_image">
