--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>R6SXBB</title>
-  <meta name="description" content="レインボーシックスシージの作戦ボード。作戦の検討にお役立てください。">
+  <meta name="description" content="レインボーシックスシージXの非公式作戦ボード。作戦の検討にお役立てください。">
   <meta name="keywords" content="Rainbow, Siege, R6SX, briefing, tactics, strategy, レインボーシックスシージ, シージ, 作戦ボード">
   <!--OGP-->
-  <meta property="og:title" content="RainbowSixSiegeX BriefingBase">
+  <meta property="og:title" content="R6SXBB - RainbowSixSiegeX BriefingBase">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://heishia35.github.io/RainbowSixSiegeX_BB/">
   <meta property="og:image" content="https://heishia35.github.io/RainbowSixSiegeX_BB/image/top_logo_L--ogp.jpg">
   <meta property="og:site_name" content="RainbowSixSiegeX BriefingBase">
-  <meta property="og:description" content="レインボーシックスシージの作戦ボード。作戦の検討にお役立てください。">
+  <meta property="og:description" content="レインボーシックスシージXの非公式作戦ボード。作戦の検討にお役立てください。">
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="R6SXBB - RainbowSixSiegeX BriefingBase">
+  <meta name="twitter:description" content="レインボーシックスシージXの非公式作戦ボード。作戦の検討にお役立てください。">
+  <meta name="twitter:image" content="https://heishia35.github.io/RainbowSixSiegeX_BB/image/top_logo_L--ogp.jpg">
   <!--favicon-->
   <link rel="icon" type="image/webp" href="image/logo--small.webp">
   <!--font-->
